[ISB-132] add environment variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.database=${MONGODB_DBNAME}
 spring.data.mongodb.uri=${MONGODB_URI}
+payment.instrument.uri=${PAYMENT_INSTRUMENT_URI}
+iban.uri=${IBAN_URI}
