[ISB-211] add queue for iban

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,17 @@ spring.data.mongodb.database=${MONGODB_DBNAME}
 spring.data.mongodb.uri=${MONGODB_URI}
 payment.instrument.uri=${PAYMENT_INSTRUMENT_URI}
 iban.uri=${IBAN_URI}
+
+spring.cloud.stream.kafka.binder.auto-create-topics=false
+spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST}
+spring.cloud.stream.kafka.binder.configuration.heartbeat.interval.ms=30000
+spring.cloud.stream.kafka.binder.configuration.session.timeout.ms=60000
+spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_IBAN_SASL_JAAS_CONFIG}
+spring.cloud.stream.kafka.binder.configuration.sasl.mechanism=${KAFKA_IBAN_SASL_MECHANISM}
+spring.cloud.stream.kafka.binder.configuration.security.protocol=${KAFKA_IBAN_SECURITY_PROTOCOL}
+spring.cloud.stream.kafka.binder.consumerProperties.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.cloud.stream.kafka.binder.consumerProperties.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.timeout.max.ms=200000
+spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.timeout.ms=100000
+spring.cloud.stream.kafka.binder.consumerProperties.connections.max.idle.ms=300000
+kafka.topic.iban=${KAFKA_TOPIC_IBAN}
