--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.iban4j</groupId>
       <artifactId>iban4j</artifactId>
       <version>3.2.3-RELEASE</version>
