--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -101,7 +101,7 @@ microservice-chart:
     aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
     MONGODB_URI: mongodb-connection-string
     KAFKA_IBAN_SASL_JAAS_CONFIG: evh-idpay-checkiban-evaluation-idpay-checkiban-evaluation-producer-jaas-config-idpay-00
-    APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
+#    APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
     name: "cstar-d-idpay-kv"
