[ISB-236] Pubblicazione enrollment carte su coda verso Timeline

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,23 @@ spring.data.mongodb.database=${MONGODB_DBNAME}
 spring.data.mongodb.uri=${MONGODB_URI}
 payment.instrument.uri=${PAYMENT_INSTRUMENT_URI}
 iban.uri=${IBAN_URI}
-
+spring.application.name=idpay-wallet
+spring.config.activate.on-profile=default
+spring.cloud.stream.function.definition=walletQueue
+spring.cloud.stream.bindings.walletQueue-out-0.destination=${KAFKA_TOPIC_IBAN}
+spring.cloud.stream.bindings.walletQueue-out-0.content-type=${KAFKA_CONTENT_TYPE:application/json}
+spring.cloud.stream.bindings.walletQueue-out-0.binder=kafka-iban
+spring.cloud.stream.bindings.walletQueue-out-1.destination=${KAFKA_TOPIC_TIMELINE}
+spring.cloud.stream.bindings.walletQueue-out-1.content-type=${KAFKA_CONTENT_TYPE:application/json}
+spring.cloud.stream.bindings.walletQueue-out-1.binder=kafka-timeline
+spring.cloud.stream.binders.kafka-iban.type=kafka
+spring.cloud.stream.binders.kafka-iban.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_IBAN_SASL_JAAS_CONFIG}
+spring.cloud.stream.binders.kafka-timeline.type=kafka
+spring.cloud.stream.binders.kafka-timeline.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_TIMELINE_SASL_JAAS_CONFIG}
 spring.cloud.stream.kafka.binder.auto-create-topics=false
 spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST}
 spring.cloud.stream.kafka.binder.configuration.heartbeat.interval.ms=30000
 spring.cloud.stream.kafka.binder.configuration.session.timeout.ms=60000
-spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_IBAN_SASL_JAAS_CONFIG}
 spring.cloud.stream.kafka.binder.configuration.sasl.mechanism=${KAFKA_IBAN_SASL_MECHANISM}
 spring.cloud.stream.kafka.binder.configuration.security.protocol=${KAFKA_IBAN_SECURITY_PROTOCOL}
 spring.cloud.stream.kafka.binder.consumerProperties.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -15,4 +26,3 @@ spring.cloud.stream.kafka.binder.consumerProperties.value.deserializer=org.apach
 spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.timeout.max.ms=200000
 spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.timeout.ms=100000
 spring.cloud.stream.kafka.binder.consumerProperties.connections.max.idle.ms=300000
-kafka.topic.iban=${KAFKA_TOPIC_IBAN}
