[ISB-117] Pubblicazione enrollment carte su coda verso RTD(correzione)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.cloud.stream.binders.kafka-timeline.environment.spring.cloud.stream.kafka
 spring.cloud.stream.binders.kafka-timeline.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST}
 spring.cloud.stream.binders.kafka-rtd.type=kafka
 spring.cloud.stream.binders.kafka-rtd.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_RTD_SASL_JAAS_CONFIG}
-spring.cloud.stream.binders.kafka-rtd.environment.spring.cloud.stream.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_RTD}
+spring.cloud.stream.binders.kafka-rtd.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_RTD}
 spring.cloud.stream.kafka.binder.auto-create-topics=false
 spring.cloud.stream.kafka.binder.configuration.heartbeat.interval.ms=30000
 spring.cloud.stream.kafka.binder.configuration.session.timeout.ms=60000
