--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,40 +1,40 @@
-spring.data.mongodb.database=${MONGODB_DBNAME}
-spring.data.mongodb.uri=${MONGODB_URI}
-payment.instrument.uri=${PAYMENT_INSTRUMENT_URI}
+spring.data.mongodb.database=${MONGODB_DBNAME:}
+spring.data.mongodb.uri=${MONGODB_URI:}
+payment.instrument.uri=${PAYMENT_INSTRUMENT_URI:}
 iban.uri=${IBAN_URI}
 spring.application.name=idpay-wallet
 spring.config.activate.on-profile=default
 spring.cloud.stream.function.definition=walletQueue
-spring.cloud.stream.bindings.walletQueue-out-0.destination=${KAFKA_TOPIC_IBAN}
+spring.cloud.stream.bindings.walletQueue-out-0.destination=${KAFKA_TOPIC_IBAN:}
 spring.cloud.stream.bindings.walletQueue-out-0.content-type=${KAFKA_CONTENT_TYPE:application/json}
 spring.cloud.stream.bindings.walletQueue-out-0.binder=kafka-iban
-spring.cloud.stream.bindings.walletQueue-out-1.destination=${KAFKA_TOPIC_TIMELINE}
+spring.cloud.stream.bindings.walletQueue-out-1.destination=${KAFKA_TOPIC_TIMELINE:}
 spring.cloud.stream.bindings.walletQueue-out-1.content-type=${KAFKA_CONTENT_TYPE:application/json}
 spring.cloud.stream.bindings.walletQueue-out-1.binder=kafka-timeline
-spring.cloud.stream.bindings.walletQueue-out-2.destination=${KAFKA_TOPIC_RTD}
+spring.cloud.stream.bindings.walletQueue-out-2.destination=${KAFKA_TOPIC_RTD:}
 spring.cloud.stream.bindings.walletQueue-out-2.content-type=${KAFKA_CONTENT_TYPE:application/json}
 spring.cloud.stream.bindings.walletQueue-out-2.binder=kafka-rtd
-spring.cloud.stream.bindings.walletQueue-in-0.destination=${KAFKA_TOPIC_OUTCOME}
+spring.cloud.stream.bindings.walletQueue-in-0.destination=${KAFKA_TOPIC_OUTCOME:}
 spring.cloud.stream.bindings.walletQueue-in-0.group=${KAFKA_OUTCOME_GROUP_IN:}
 spring.cloud.stream.bindings.walletQueue-in-0.content-type=${KAFKA_CONTENT_TYPE:application/json}
 spring.cloud.stream.bindings.walletQueue-in-0.binder=kafka-outcome
 spring.cloud.stream.binders.kafka-iban.type=kafka
-spring.cloud.stream.binders.kafka-iban.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_IBAN_SASL_JAAS_CONFIG}
-spring.cloud.stream.binders.kafka-iban.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST}
+spring.cloud.stream.binders.kafka-iban.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_IBAN_SASL_JAAS_CONFIG:}
+spring.cloud.stream.binders.kafka-iban.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
 spring.cloud.stream.binders.kafka-outcome.type=kafka
-spring.cloud.stream.binders.kafka-outcome.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_OUTCOME_SASL_JAAS_CONFIG}
-spring.cloud.stream.binders.kafka-outcome.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST}
+spring.cloud.stream.binders.kafka-outcome.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_OUTCOME_SASL_JAAS_CONFIG:}
+spring.cloud.stream.binders.kafka-outcome.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
 spring.cloud.stream.binders.kafka-timeline.type=kafka
-spring.cloud.stream.binders.kafka-timeline.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_TIMELINE_SASL_JAAS_CONFIG}
-spring.cloud.stream.binders.kafka-timeline.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST}
+spring.cloud.stream.binders.kafka-timeline.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_TIMELINE_SASL_JAAS_CONFIG:}
+spring.cloud.stream.binders.kafka-timeline.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
 spring.cloud.stream.binders.kafka-rtd.type=kafka
-spring.cloud.stream.binders.kafka-rtd.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_RTD_SASL_JAAS_CONFIG}
-spring.cloud.stream.binders.kafka-rtd.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_RTD}
+spring.cloud.stream.binders.kafka-rtd.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_RTD_SASL_JAAS_CONFIG:}
+spring.cloud.stream.binders.kafka-rtd.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_RTD:}
 spring.cloud.stream.kafka.binder.auto-create-topics=false
 spring.cloud.stream.kafka.binder.configuration.heartbeat.interval.ms=30000
 spring.cloud.stream.kafka.binder.configuration.session.timeout.ms=60000
-spring.cloud.stream.kafka.binder.configuration.sasl.mechanism=${KAFKA_SASL_MECHANISM}
-spring.cloud.stream.kafka.binder.configuration.security.protocol=${KAFKA_SECURITY_PROTOCOL}
+spring.cloud.stream.kafka.binder.configuration.sasl.mechanism=${KAFKA_SASL_MECHANISM:}
+spring.cloud.stream.kafka.binder.configuration.security.protocol=${KAFKA_SECURITY_PROTOCOL:}
 spring.cloud.stream.kafka.binder.consumerProperties.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.cloud.stream.kafka.binder.consumerProperties.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.timeout.max.ms=200000
