Added Postman collection + Feign Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,4 @@ spring.cloud.stream.kafka.binder.consumerProperties.value.deserializer=org.apach
 spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.timeout.max.ms=200000
 spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.timeout.ms=100000
 spring.cloud.stream.kafka.binder.consumerProperties.connections.max.idle.ms=300000
+rest-client.payment.intrument.serviceCode=idpay-payment-instrument
