--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -88,7 +88,7 @@ microservice-chart:
   envConfigMapExternals:
     idpay-common:
       TZ: tz
-      JAVA_TOOL_OPTIONS: java_tool_options
+      JAVA_TOOL_OPTIONS: JAVA_TOOL_OPTIONS
     rest-client:
       PAYMENT_INSTRUMENT_URI: idpay_payment_instrument_host
     idpay-eventhub-00:
