--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,16 @@ spring.cloud.stream.bindings.walletQueue-in-0.destination=${KAFKA_TOPIC_OUTCOME:
 spring.cloud.stream.bindings.walletQueue-in-0.group=${KAFKA_OUTCOME_GROUP_IN:}
 spring.cloud.stream.bindings.walletQueue-in-0.content-type=${KAFKA_CONTENT_TYPE:application/json}
 spring.cloud.stream.bindings.walletQueue-in-0.binder=kafka-outcome
+spring.cloud.stream.bindings.walletQueue-in-1.destination=${KAFKA_TOPIC_CHECKIBAN_OUTCOME:}
+spring.cloud.stream.bindings.walletQueue-in-1.group=${KAFKA_OUTCOME_CHECKIBAN_GROUP_IN:}
+spring.cloud.stream.bindings.walletQueue-in-1.content-type=${KAFKA_CONTENT_TYPE:application/json}
+spring.cloud.stream.bindings.walletQueue-in-1.binder=kafka-checkiban-outcome
 spring.cloud.stream.binders.kafka-iban.type=kafka
 spring.cloud.stream.binders.kafka-iban.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_IBAN_SASL_JAAS_CONFIG:}
 spring.cloud.stream.binders.kafka-iban.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
+spring.cloud.stream.binders.kafka-checkiban-outcome.type=kafka
+spring.cloud.stream.binders.kafka-checkiban-outcome.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_CHECKIBAN_OUTCOME_SASL_JAAS_CONFIG:}
+spring.cloud.stream.binders.kafka-checkiban-outcome.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
 spring.cloud.stream.binders.kafka-outcome.type=kafka
 spring.cloud.stream.binders.kafka-outcome.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_OUTCOME_SASL_JAAS_CONFIG:}
 spring.cloud.stream.binders.kafka-outcome.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
