[ISB-312] Correzione helm

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -99,6 +99,8 @@ microservice-chart:
       KAFKA_TOPIC_OUTCOME: idpay_onboarding_outcome_topic
       KAFKA_TOPIC_CHECKIBAN_OUTCOME: idpay_checkiban_outcome_topic
       KAFKA_TOPIC_TIMELINE: idpay_timeline_topic
+      KAFKA_CHECKIBAN_OUTCOME_GROUP_IN: idpay-checkiban-outcome-consumer-group
+      KAFKA_OUTCOME_GROUP_IN: idpay-onboarding-outcome-wallet-consumer-group
     rtd-eventhub:
       KAFKA_BINDER_BROKER_ENDPOINT_RTD: kafka_broker_rtd
       KAFKA_TOPIC_RTD: rtd_enrolled_pi_topic
