--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,9 @@ spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.time
 spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.timeout.ms=100000
 spring.cloud.stream.kafka.binder.consumerProperties.connections.max.idle.ms=300000
 rest-client.payment.intrument.serviceCode=idpay-payment-instrument
+
+logging.level.root=${LOG_LEVEL_ROOT:INFO}
+logging.level.it.gov.pagopa=${LOG_LEVEL_PAGOPA:DEBUG}
+logging.level.org.springframework.cloud=${LOG_LEVEL_SPRING_CLOUD:WARN}
+logging.level.org.springframework.data=${LOG_LEVEL_SPRING_DATA:INFO}
+logging.level.org.springframework.boot=${LOG_LEVEL_SPRING_BOOT:INFO}
