--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ payment.instrument.uri=${PAYMENT_INSTRUMENT_URI:}
 iban.uri=${IBAN_URI}
 spring.application.name=idpay-wallet
 spring.config.activate.on-profile=default
-spring.cloud.stream.function.definition=walletQueue
+spring.cloud.stream.function.definition=walletQueue;consumerIban
 spring.cloud.stream.bindings.walletQueue-out-0.destination=${KAFKA_TOPIC_IBAN:}
 spring.cloud.stream.bindings.walletQueue-out-0.content-type=${KAFKA_CONTENT_TYPE:application/json}
 spring.cloud.stream.bindings.walletQueue-out-0.binder=kafka-iban
@@ -18,10 +18,10 @@ spring.cloud.stream.bindings.walletQueue-in-0.destination=${KAFKA_TOPIC_OUTCOME:
 spring.cloud.stream.bindings.walletQueue-in-0.group=${KAFKA_OUTCOME_GROUP_IN:}
 spring.cloud.stream.bindings.walletQueue-in-0.content-type=${KAFKA_CONTENT_TYPE:application/json}
 spring.cloud.stream.bindings.walletQueue-in-0.binder=kafka-outcome
-spring.cloud.stream.bindings.walletQueue-in-1.destination=${KAFKA_TOPIC_CHECKIBAN_OUTCOME:}
-spring.cloud.stream.bindings.walletQueue-in-1.group=${KAFKA_CHECKIBAN_OUTCOME_GROUP_IN:}
-spring.cloud.stream.bindings.walletQueue-in-1.content-type=${KAFKA_CONTENT_TYPE:application/json}
-spring.cloud.stream.bindings.walletQueue-in-1.binder=kafka-checkiban-outcome
+spring.cloud.stream.bindings.consumerIban-in-0.destination=${KAFKA_TOPIC_CHECKIBAN_OUTCOME:}
+spring.cloud.stream.bindings.consumerIban-in-0.group=${KAFKA_CHECKIBAN_OUTCOME_GROUP_IN:}
+spring.cloud.stream.bindings.consumerIban-in-0.content-type=${KAFKA_CONTENT_TYPE:application/json}
+spring.cloud.stream.bindings.consumerIban-in-0.binder=kafka-checkiban-outcome
 spring.cloud.stream.binders.kafka-iban.type=kafka
 spring.cloud.stream.binders.kafka-iban.environment.spring.cloud.stream.kafka.binder.configuration.sasl.jaas.config=${KAFKA_IBAN_SASL_JAAS_CONFIG:}
 spring.cloud.stream.binders.kafka-iban.environment.spring.cloud.stream.kafka.binder.brokers=${KAFKA_BINDER_BROKER_ENDPOINT_LIST:}
