[ISB-334] add features for unsubscribe to initiative

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.data.mongodb.database=${MONGODB_DBNAME:}
 spring.data.mongodb.uri=${MONGODB_URI:}
 payment.instrument.uri=${PAYMENT_INSTRUMENT_URI:}
+onboarding.uri=${ONBOARDING_URI:}
 iban.uri=${IBAN_URI}
 spring.application.name=idpay-wallet
 spring.config.activate.on-profile=default
@@ -48,6 +49,7 @@ spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.time
 spring.cloud.stream.kafka.binder.consumerProperties.socket.connection.setup.timeout.ms=100000
 spring.cloud.stream.kafka.binder.consumerProperties.connections.max.idle.ms=300000
 rest-client.payment.intrument.serviceCode=idpay-payment-instrument
+rest-client.onboarding.serviceCode=idpay-onboarding
 
 logging.level.root=${LOG_LEVEL_ROOT:INFO}
 logging.level.it.gov.pagopa=${LOG_LEVEL_PAGOPA:DEBUG}
