fix wallet status, add onboarding_uri to helm

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -91,6 +91,7 @@ microservice-chart:
       JAVA_TOOL_OPTIONS: JAVA_TOOL_OPTIONS
     rest-client:
       PAYMENT_INSTRUMENT_URI: idpay_payment_instrument_host
+      ONBOARDING_URI: idpay_onboarding_host
     idpay-eventhub-00:
       KAFKA_BINDER_BROKER_ENDPOINT_LIST: kafka_broker
       KAFKA_SASL_MECHANISM: kafka_sasl_mechanism
