--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -102,6 +102,10 @@ microservice-chart:
       KAFKA_TOPIC_TIMELINE: idpay_timeline_topic
       KAFKA_CHECKIBAN_OUTCOME_GROUP_IN: idpay-checkiban-outcome-consumer-group
       KAFKA_OUTCOME_GROUP_IN: idpay-onboarding-outcome-wallet-consumer-group
+    idpay-eventhub-01:
+      KAFKA_BINDER_BROKER_ENDPOINT_LIST_RULE_ENGINE: kafka_broker
+      KAFKA_TOPIC_RULE_ENGINE: idpay_hpan_update_topic
+      KAFKA_RULE_ENGINE_GROUP_IN: idpay-transaction-wallet-consumer-group
 
   envSecret:
     aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
@@ -110,6 +114,7 @@ microservice-chart:
     KAFKA_IBAN_SASL_JAAS_CONFIG: evh-idpay-checkiban-evaluation-idpay-checkiban-evaluation-producer-jaas-config-idpay-00
     KAFKA_TIMELINE_SASL_JAAS_CONFIG: evh-idpay-timeline-idpay-timeline-producer-jaas-config-idpay-00
     KAFKA_OUTCOME_SASL_JAAS_CONFIG: evh-idpay-onboarding-outcome-idpay-onboarding-outcome-consumer-jaas-config-idpay-00
+    KAFKA_RULE_ENGINE_SASL_JAAS_CONFIG: evh-idpay-transaction-idpay-transaction-consumer-jaas-config-idpay-01
 #    APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
