--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -104,7 +104,7 @@ microservice-chart:
       KAFKA_OUTCOME_GROUP_IN: idpay-onboarding-outcome-wallet-consumer-group
     idpay-eventhub-01:
       KAFKA_BINDER_BROKER_ENDPOINT_RULE_ENGINE: kafka_broker
-      KAFKA_TOPIC_RULE_ENGINE: idpay_hpan_update_topic
+      KAFKA_TOPIC_RULE_ENGINE: idpay_transaction_topic
       KAFKA_RULE_ENGINE_GROUP_IN: idpay_transaction_wallet_consumer_group
 
   envSecret:
