--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -100,6 +100,7 @@ microservice-chart:
       KAFKA_TOPIC_OUTCOME: idpay_onboarding_outcome_topic
       KAFKA_TOPIC_CHECKIBAN_OUTCOME: idpay_checkiban_outcome_topic
       KAFKA_TOPIC_TIMELINE: idpay_timeline_topic
+      KAFKA_TOPIC_NOTIFICATION: idpay-notification-request
       KAFKA_CHECKIBAN_OUTCOME_GROUP_IN: idpay-checkiban-outcome-consumer-group
       KAFKA_OUTCOME_GROUP_IN: idpay-onboarding-outcome-wallet-consumer-group
     idpay-eventhub-01:
@@ -115,6 +116,7 @@ microservice-chart:
     KAFKA_TIMELINE_SASL_JAAS_CONFIG: evh-idpay-timeline-idpay-timeline-producer-jaas-config-idpay-00
     KAFKA_OUTCOME_SASL_JAAS_CONFIG: evh-idpay-onboarding-outcome-idpay-onboarding-outcome-consumer-jaas-config-idpay-00
     KAFKA_RULE_ENGINE_SASL_JAAS_CONFIG: evh-idpay-transaction-idpay-transaction-consumer-jaas-config-idpay-01
+    KAFKA_NOTIFICATION_SASL_JAAS_CONFIG: evh-idpay-notification-idpay-notification-producer-jaas-config-idpay-00
 #    APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
