--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -73,6 +73,7 @@ microservice-chart:
       KAFKA_BINDER_BROKER_ENDPOINT_RULE_ENGINE: kafka_broker
       KAFKA_TOPIC_RULE_ENGINE: idpay_transaction_topic
       KAFKA_RULE_ENGINE_GROUP_IN: idpay_transaction_wallet_consumer_group
+      KAFKA_TOPIC_ERRORS: idpay_error_topic
 
   envSecret:
     MONGODB_URI: mongodb-connection-string
@@ -82,6 +83,8 @@ microservice-chart:
     KAFKA_OUTCOME_SASL_JAAS_CONFIG: evh-idpay-onboarding-outcome-idpay-onboarding-outcome-consumer-jaas-config-idpay-00
     KAFKA_RULE_ENGINE_SASL_JAAS_CONFIG: evh-idpay-transaction-idpay-transaction-consumer-jaas-config-idpay-01
     KAFKA_NOTIFICATION_SASL_JAAS_CONFIG: evh-idpay-notification-request-idpay-notification-request-producer-jaas-config-idpay-00
+    KAFKA_ERRORS_SASL_JAAS_CONFIG: evh-idpay-transaction-idpay-transaction-consumer-jaas-config-idpay-01
+
 #    APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   # nodeSelector: {}
