--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -175,6 +175,7 @@ spring:
             heartbeat.interval.ms: ${KAFKA_CONFIG_HEARTBEAT_INTERVAL_MS:3000}
             session.timeout.ms: ${KAFKA_CONFIG_SESSION_TIMEOUT_MS:30000}
             request.timeout.ms: ${KAFKA_CONFIG_REQUEST_TIMEOUT_MS:60000}
+            metadata.max.age.ms: ${KAFKA_CONFIG_METADATA_MAX_AGE:180000}
             sasl.mechanism: ${KAFKA_CONFIG_SASL_MECHANISM:PLAIN}
             security.protocol: ${KAFKA_CONFIG_SECURITY_PROTOCOL:SASL_SSL}
         bindings:
