Kafka max request size

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -178,6 +178,7 @@ spring:
             metadata.max.age.ms: ${KAFKA_CONFIG_METADATA_MAX_AGE:180000}
             sasl.mechanism: ${KAFKA_CONFIG_SASL_MECHANISM:PLAIN}
             security.protocol: ${KAFKA_CONFIG_SECURITY_PROTOCOL:SASL_SSL}
+            max.request.size: ${KAFKA_CONFIG_MAX_REQUEST_SIZE:1000000}
         bindings:
           consumerRefund-in-0:
             consumer:
