Added Janino dependency

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
       <groupId>io.github.openfeign</groupId>
       <artifactId>feign-okhttp</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.codehaus.janino</groupId>
+      <artifactId>janino</artifactId>
+      <version>3.1.8</version>
+    </dependency>
     <!--TEST-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
