Enabled jmx + actuator timeouts

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,8 @@ rest-client:
 spring:
   application:
     name: "@project.artifactId@"
+    version: "@project.version@"
+  jmx.enabled: true
   cloud:
     stream:
       binders:
