IDP-295 Disabled ApplicationInsight Profiler

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -50,6 +50,7 @@ microservice-chart:
     APPLICATIONINSIGHTS_ROLE_NAME: "idpaywallet"
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
+    APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
 
   envConfigMapExternals:
     idpay-common:
