--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -292,3 +292,8 @@ spring:
           maxConnectionLifeTimeMS: ${MONGODB_CONNECTIONPOOL_MAX_CONNECTION_LIFE_MS:0}
           maxConnectionIdleTimeMS: ${MONGODB_CONNECTIONPOOL_MAX_CONNECTION_IDLE_MS:120000}
           maxConnecting: ${MONGODB_CONNECTIONPOOL_MAX_CONNECTING:2}
+
+app:
+  initiative:
+    logo:
+      url: ${INITIATIVE_LOGO_URL}
