Added auto-index-creation: true

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -328,6 +328,7 @@ spring:
     mongodb:
       uri: ${MONGODB_URI:mongodb://localhost:27017}
       database: ${MONGODB_DBNAME:idpay}
+      auto-index-creation: true
       # custom configured properties
       config:
         connectionPool:
