[IDP-901] Update helm config

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -63,7 +63,7 @@ microservice-chart:
     DELETE_PAGINATION_SIZE: "100"
     DELETE_DELAY_TIME: "1000"
 
-  envConfigMapExternals:
+  externalConfigMapValues:
     idpay-common:
       TZ: TZ
     rest-client:
@@ -109,3 +109,9 @@ microservice-chart:
   # tolerations: []
 
   # affinity: {}
+
+  externalConfigMapFiles:
+    create: true
+    configMaps:
+      - name: appinsights-config
+        key: applicationinsights.json
